--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,9 @@ android {
 }
 
 dependencies {
+    implementation("org.tensorflow:tensorflow-android:2.8.0")
+    implementation("org.tensorflow:tensorflow-lite-support:0.4.0")
+    implementation("org.tensorflow:tensorflow-lite-metadata:0.1.0")
     implementation 'com.squareup.picasso:picasso:2.8'
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
